cookie fix: being logged in on more Webs at once works now [Jaques Distler]
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@511 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -22,6 +22,7 @@
    - updated packaged sqlite3-ruby to 1.2.0
 
  - FEATURES:
+   - fix: being logged in on more Webs at once works now [Jaques Distler]
    - Stylesheet tweaks
    - visual display if webs are pass-protected (div background)
    - Linux packaging
