--- a/README
+++ b/README
@@ -1,39 +1,60 @@
-===What is Instiki?
 
-Admitted, it's YetAnotherWikiClone[http://c2.com/cgi/wiki?WikiWikiClones], but with a strong focus
-on simplicity of installation and running:
+= Instiki
 
-Step 1. Download
-Step 2. Run "instiki"
+Instiki is a wiki clone so pretty and easy to set up, you'll wonder if it’s really a wiki. Runs on Rails and focuses on portability and stability. Supports file uploads, PDF export, RSS, multiple users and password protection. Some use Instiki as a CMS (Content Management System) because of it's ability to export static pages.
 
-If you are on Windows:
-"Step 3. Chuckle... "There's no step three!" (TM)"
+Instiki lowers the barriers of interest for when you might consider using a wiki. It's so simple to get running that you'll find yourself using it for anything -- taking notes, brainstorming, organizing a gathering.
 
-You're now running a perfectly suitable wiki on port 2500 
-that'll present you with one-step setup, followed by a textarea for the home page
-on http://localhost:2500
 
-Instiki lowers the barriers of interest for when you might consider
-using a wiki. It's so simple to get running that you'll find yourself
-using it for anything -- taking notes, brainstorming, organizing a 
-gathering.
+== Supported Platforms
 
-Having said all that, if you are not on Windows, in this version of Instiki it is a somewhat different story.
-Since the author has no Linux or Mac at hand, and Instiki is moving to a SQL-based backend, this is what it takes 
-to install (until somebody sends a patch to properly package Instiki for all those other platforms):
+Instiki only relies on Ruby - the sole external dependency (it includes all other dependencies). Any OS that can run Ruby can run Instiki - that includes Windows, Linux, Mac OS X and most known Unix flavors.
 
-3. Kill "instiki"
-4. Install SQLite 3 database engine from http://www.sqlite.org/
-5. Install SQLite 3 driver for Ruby from http://sqlite-ruby.rubyforge.org/
-6. Install Rake from http://rake.rubyforge.org/
-7. Execute rm -f db/*.db
-8. Execute 'rake environment RAILS_ENV=production migrate'
-9. Make an embarrassed sigh (as I do while writing this)
-10. Run 'instiki' again
-11. Pat yourself on the shoulder for being such a talented geek
-12. At least, there is no step twelve! (TM)
+Instiki on BeOS, Amiga OS, OS2, Zeta OS and support for various exotic Platforms is planned. Mostly it already works, if Ruby runs there (download the linux version in this case). Please contact parasew if you want to help out for your OS that is not listed. Please also get in touch if you are able to create an instiki package for your favorite unix or linux distribution.
 
-===Features:
+
+== 3 easy Steps to get the Instiki experience
+
+  Step 1. Get Ruby, Download Instiki
+  Step 2. Run "instiki"
+  Step 3. Chuckle... "There's no step three!" (TM)
+ 
+
+== Details
+
+You need at least Ruby Version 1.8.4 installed on your System. The second dependency is a Database System, but don't worry, maybe you are already served.
+
+
+=== If you are on Windows
+
+- Get the *Ruby One-Click Installer - Windows* http://rubyforge.org/projects/rubyinstaller
+- double-click instiki.bat or instiki.cmd and there you go!
+
+if you are running Windows 95, 98 or ME and cannot get instiki to run, try Version 0.11.pl1 which is the last instiki Version to support that old-style OS's. Please update to some Unix-OS or complain to the Ruby on Rails List at http://www.ruby-forum.com/forum/3 (Rails does not support your old Windows.)
+
+
+=== If you are on Mac OSX
+
+Since the Apple guys really screwed it up, having an old Ruby Version (1.8.2) and a broken Readline Library with MacOSX Tiger, you have to
+
+- get the *One-Click Ruby Installer Package for OSX* from [ftp://ftp.math.ohio-state.edu/osx/pkgs/unix/Ruby-1.8.5-1-ub.mpkg.dmg]
+- run "ruby instiki.rb" via command-line in the directory 
+
+
+=== If you are on Linux
+
+
+=== Any other System
+
+- get Ruby for your System, compile if nessesary: http://ruby-lang.org
+- get SQLite or compile from http://sqlite.org (you can also use mysql or any other supported database system if you want)
+- run instiki
+
+You're now running a perfectly suitable wiki on port 2500 that'll present you with one-step setup, followed by a textarea for the home page on http://localhost:2500
+
+
+== Features
+
 * Regular expression search: Find deep stuff really fast
 * Revisions: Follow the changes on every page from birth. Rollback to an earlier rev
 * Export to HTML or markup in a zip: Take the entire wiki with you home or for reference
@@ -42,24 +63,27 @@ to install (until somebody sends a patch to properly package Instiki for all tho
 * Password-protected webs: Keep it private
 * Authors: Each revision is associated with an author, so you can see who changed what
 * Reference tracker: Which other pages are pointing to the current?
-* Speed: Using Madelein[http://madeleine.sourceforge.net] for persistence (all pages are in memory)
-* Three markup choices: Textile[http://www.textism.com/tools/textile] 
-  (default / RedCloth[http://www.whytheluckystiff.net/ruby/redcloth]), 
+* Three markup choices: Textile http://www.textism.com/tools/textile
+  (default / RedCloth http://www.whytheluckystiff.net/ruby/redcloth ), 
   Markdown (BlueCloth[http://bluecloth.rubyforge.org]), and RDoc[http://rdoc.sourceforge.net/doc]
-* Embedded webserver: Through WEBrick[http://www.webrick.org]
+* Embedded webserver: Through WEBrick[http://www.webrick.org], also runs on Mongel if you want to.
 * Internationalization: Wiki words in any latin, greek, cyrillian, or armenian characters
 * Color diffs: Track changes through revisions
-* Definitely can run on SQLite and MySQL
-* May be able to run on Postgres, Oracle, DB2 and SqlServer. If you try this, and it works 
-  (or, it doesn't, but you make it work) please write about it on Instiki.org.
+* Runs on SQLite per default, can be configured to run on PostgreSQL, MySQL, DB2, Firebird, Openbase, Oracle, SQL Server or Sybase
 
-===Command-line options:
+
+== Command-line options:
+
 * Run "ruby instiki --help"
 
-===History:
+
+== History:
+
  * See CHANGELOG
 
-===Migrating Instiki 0.10.2 storage to Instiki 0.11.0 database
+
+== Migrating Instiki 0.10.2 storage to Instiki 0.11.0 database
+
 1. Install Instiki 0.11 and check that it works (you should be able to create a web, edit and save a HomePage)
 2. Execute 
       ruby script\import_storage \
@@ -81,7 +105,9 @@ to install (until somebody sends a patch to properly package Instiki for all tho
 The most common migration problem is this: if you open All Pages and see a lot of orphaned pages, 
 you forgot to run ruby script\reset_references after importing the data.
 
+
 ===Upgrading from Instiki-AR Beta 1
+
 In Beta 2, we switch to ActiveRecord:Migrations. Therefore:
 1. Back up your production database.
 2. Open command-line session to your database and execute: 
@@ -93,21 +119,33 @@ Step 2 creates a table that tells to ActiveRecord:Migrations that the current ve
 of this database is 1 (corresponding to Beta 1), and step 3 makes it up-to-date with
 the current version of Instiki.
 
-===Download the latest release from:
+
+== Download the latest release from:
+
 * http://rubyforge.org/project/showfiles.php?group_id=186
 
-===Visit the "official" Instiki wiki:
+
+== Visit the "official" Instiki wiki:
+
 * http://instiki.org
 
-===License:
+
+== License:
+
 * same as Ruby's
 
+
 ---
+
 Authors::
 
 Versions 0.0 to 0.9.1:: David Heinemeier Hansson
-Email::  david@loudthinking.com
-Weblog:: http://www.loudthinking.com
+Email::  david[AT]loudthinking.com
+Weblog:: http://www.loudthinking.com[http://www.loudthinking.com]
 
 From 0.9.2 onwards:: Alexey Verkhovsky
-Email:: alex@verk.info
+Email:: alex[AT]verk.info
+
+From 0.11 onwards:: Matthias Tarasiewicz and 5uper.net
+Email:: parasew[AT]gmail.com
+Website:: http://5uper.net[http://5uper.net]
