updated the changelog for the upcoming 0.13 release
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@535 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+ * 0.13.0:
+
+ Mainly a Bugfix Release, which fixes two XSS Vulnerabilities.
+ More information can be found on Jacques Distler's Blog:
+ http://golem.ph.utexas.edu/~distler/blog/archives/001634.html
+
 ------------------------------------------------------------------------------
  * 0.12.0:
  
